--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
       <java.version>1.7</java.version>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-  </properties>
- 
- 
+		<spring.version>3.2.2.RELEASE</spring.version>
+		<jackson.version>1.9.10</jackson.version>
+		<jdk.version>1.6</jdk.version>
+	</properties>
+	
   <repositories>
       <!-- Repository for ORACLE JDBC Driver -->
       <repository>
@@ -28,7 +30,23 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
   </repositories>
  
   <dependencies>
- 
+  	<!-- Jackson JSON Mapper -->
+    <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+        <version>${jackson.version}</version>
+    </dependency>	
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-core</artifactId>
+	    <version>2.4.3</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.4.3</version>
+	</dependency>
+
       <!-- Spring framework START -->
       <!-- http://mvnrepository.com/artifact/org.springframework/spring-core -->
       <dependency>
