--- a/pom.xml
+++ b/pom.xml
@@ -144,13 +144,22 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
               <groupId>org.apache.tomcat.maven</groupId>
               <artifactId>tomcat7-maven-plugin</artifactId>
               <version>2.2</version>
-              <!-- Config: contextPath and Port (Default: /SpringMVCAnnotationSecurity : 8080) -->
-              <!--
-              <configuration>
-                  <path>/</path>
-                  <port>8899</port>
-              </configuration>
-              -->  
+			<executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals><goal>copy</goal></goals>
+                    <configuration>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>com.github.jsimone</groupId>
+                                <artifactId>webapp-runner</artifactId>
+                                <version>8.0.30.2</version>
+                                <destFileName>webapp-runner.jar</destFileName>
+                            </artifactItem>
+                        </artifactItems>
+                    </configuration>
+                </execution>
+            </executions>
           </plugin>
       </plugins>
   </build>       
