--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 		<spring.version>3.2.2.RELEASE</spring.version>
 		<jackson.version>1.9.10</jackson.version>
 		<jdk.version>1.6</jdk.version>
+        <jjwt.version>0.7.0</jjwt.version>
+        <spring.mobile.device.version>1.1.3.RELEASE</spring.mobile.device.version>
 	</properties>
 	
 	<repositories>
@@ -76,8 +78,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
           <artifactId>spring-jdbc</artifactId>
           <version>4.2.5.RELEASE</version>
       </dependency>
- 
-     
+
+	<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+	<dependency>
+	    <groupId>org.springframework.data</groupId>
+	    <artifactId>spring-data-jpa</artifactId>
+	    <version>1.0.0.RELEASE</version>
+	</dependency>
       <!-- Spring framework END -->
  
  
@@ -95,8 +102,25 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
           <artifactId>spring-security-config</artifactId>
           <version>4.0.4.RELEASE</version>
       </dependency>
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-taglibs</artifactId>
+	    <version>4.0.4.RELEASE</version>
+	    <type>jar</type>
+	    <scope>compile</scope>
+    </dependency>
+	<dependency>
+         <groupId>io.jsonwebtoken</groupId>
+         <artifactId>jjwt</artifactId>
+         <version>${jjwt.version}</version>
+	</dependency>    
       <!-- Spring Security Artifacts - END -->
- 
+	<dependency>
+		<groupId>org.springframework.mobile</groupId>
+		<artifactId>spring-mobile-device</artifactId>
+		<version>${spring.mobile.device.version}</version>
+	</dependency>
+        
       <!-- Jstl for jsp page -->
       <!-- http://mvnrepository.com/artifact/javax.servlet/jstl -->
       <dependency>
@@ -135,6 +159,19 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 	    <groupId>com.itextpdf</groupId>
 	    <artifactId>itextpdf</artifactId>
 	    <version>5.0.6</version>
+	</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.eclipse.persistence/eclipselink -->
+	<dependency>
+	    <groupId>org.eclipse.persistence</groupId>
+	    <artifactId>eclipselink</artifactId>
+	    <version>2.5.0</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+	<dependency>
+	    <groupId>javax.validation</groupId>
+	    <artifactId>validation-api</artifactId>
+	    <version>1.0.0.GA</version>
 	</dependency>
 
   </dependencies>
