API return json array

--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 	    <artifactId>jackson-databind</artifactId>
 	    <version>2.4.3</version>
 	</dependency>
-
+	<dependency>
+		<groupId>com.googlecode.json-simple</groupId>
+		<artifactId>json-simple</artifactId>
+		<version>1.1</version>
+	</dependency>
+  
       <!-- Spring framework START -->
       <!-- http://mvnrepository.com/artifact/org.springframework/spring-core -->
       <dependency>
