--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,30 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 	    <version>1.0.0.GA</version>
 	</dependency>
 
+    <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.6</version>
+        <scope>compile</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.7</version>
+        <scope>compile</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.5</version>
+        <scope>compile</scope>
+    </dependency>                
+	<dependency>
+       <groupId>com.ning</groupId>
+       <artifactId>async-http-client</artifactId>
+       <version>1.8.12</version>
+    </dependency>
+       
   </dependencies>
   
 <build>
