2017-06-06 Add send email attached excel

--- a/pom.xml
+++ b/pom.xml
@@ -207,8 +207,25 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
    <dependency>
 		<groupId>org.apache.poi</groupId>
 		<artifactId>poi</artifactId>
-		<version>3.6</version>
+		<version>3.13</version>
    </dependency>
+   <dependency>
+		<groupId>org.apache.poi</groupId>
+		<artifactId>poi-ooxml</artifactId>
+		<version>3.13</version>
+   </dependency>
+
+	<dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>3.0.5.RELEASE</version>
+    </dependency>
+        
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>1.4</version>
+	</dependency>
  </dependencies>
   
 <build>
