--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
  
 <modelVersion>4.0.0</modelVersion>
 <groupId>com.SpringMVC</groupId>
-<artifactId>SalesDiaryPro</artifactId>
+<artifactId>Sales126</artifactId>
 <packaging>war</packaging>
 <version>0.0.1-SNAPSHOT</version>
-<name>SalesDiaryPro Maven Webapp</name>
+<name>Sales126 Maven WebAPI</name>
 <url>http://maven.apache.org</url>
 
   <properties>
@@ -229,19 +229,19 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
  </dependencies>
   
 <build>
-	<finalName>SalesDiaryPro</finalName>
+	<finalName>Sales126</finalName>
 	<plugins>
          <!-- Config: Maven Tomcat Plugin -->
          <!-- http://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat7-maven-plugin -->
          <plugin>
 <!-- run local -->
          
-<!-- 				<groupId>org.apache.tomcat.maven</groupId>
+				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
- -->            
+            
 <!-- run at heroku -->
-  			<groupId>org.apache.maven.plugins</groupId>
+<!--   			<groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-dependency-plugin</artifactId>
             <version>2.3</version>
 			<executions>
@@ -259,7 +259,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                         </artifactItems>
                     </configuration>
                 </execution>
-            </executions>
+            </executions> -->
             </plugin>
 		</plugins>
 </build>       
